--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
-spring.security.user.name=oolaa
-spring.security.user.password=pleur
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=pass
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.security=DEBUG
 
 spring.jpa.defer-datasource-initialization=true
 
 server.servlet.context-path=/api
 
+spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
